# glyph_conversion_pack

./: README.md  README_zh.md  main.py  pack.mcmeta  pyproject.toml
.github/workflows/: update.yml
output/: ja_kyuu.json  lzh_simp.json  zh_guji.json  zh_hksc.json  zh_twsc.json
